# lapa

./: .gitignore  BUG_FIXES.md  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  README.md  ROADMAP.md  pyproject.toml  pytest.ini  requirements.txt
lapa/: __init__.py  analyzer.py  frontend.py  ir.py  plugin.py
lapa/analysis/: __init__.py  control_flow.py  data_flow.py  dependency_analysis.py  type_inference.py
lapa/frontends/: __init__.py  cpp.py  java.py  javascript.py  python.py  rust.py  swift.py
lapa/frontends/grammars/: __init__.py
lapa/frontends/llvm/: __init__.py  ast.py  operator.py  template.py
scripts/: build_grammars.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_frontend.py  test_ir.py  test_plugin.py
tests/analysis/: test_control_flow.py  test_data_flow.py  test_dependency_analysis.py  test_type_inference.py
tests/frontends/: __init__.py  test_cpp.py  test_grammars.py  test_java.py  test_javascript.py  test_llvm.py  test_llvm_ast.py  test_llvm_integration.py  test_llvm_operator.py  test_llvm_template.py  test_python.py  test_rust.py  test_rust_ownership.py  test_swift.py
