[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lapa"
version = "0.0.1"
authors = [
    { name="Kim, Sungwoo", email="author@example.com" },
]
description = "LLM Assisted Program Analysis Framework"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "tree-sitter>=0.20.1",  # For parsing multiple languages
    "networkx>=3.1",        # For graph-based analysis
    "numpy>=1.24.0",        # For numerical computations
    "openai>=1.0.0",        # For LLM integration
    "pytest>=7.0.0",        # For testing
    "sphinx>=7.0.0",        # For documentation
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
"Homepage" = "https://github.com/username/lapa"
"Bug Tracker" = "https://github.com/username/lapa/issues"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=lapa"
